--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,7 +20,9 @@
     "@angular/router": "^17.0.0",
     "@ngx-translate/core": "^15.0.0",
     "@ngx-translate/http-loader": "^8.0.0",
+    "angular-calendar": "^0.31.0",
     "chart.js": "^4.4.1",
+    "date-fns": "^3.3.1",
     "primeicons": "^6.0.1",
     "primeng": "^17.3.2",
     "rxjs": "~7.8.0",
